0.4
~~~

- Rectangle now can have rounded corners (r=...)
- Rectangle can have an Area or Bbox in its contruction
  to set size and position eg r=Rectangle(g.bbox())
- Added a reflect() method to AffineObj
- Added a shear() method tho AffineObj
- Added an Eps object ... produces a self-contained eps, and this
  object is used to generate the actual eps. You can also nest them
  if you wanted to.
- Eps output now conforms to DSC 3.0!
- rewrote render to use Eps.
- Added Page() and Pages() objects .. pyscript can now do multi-page
  postscript (or A0 posters etc), which also conforms to DSC 3.0.
- Fixed some bugs with Text() handling of fonts and attributes changes
- Dot can now take x,y argument instead of point
- scale() can take a single number for both axes

0.3
~~~

- Start of a Page() object for ps (as opposed to eps)
- Pyscript now redirects stderr to pyscript.log.  and gives info about
  what's going on etc etc, some basic command line switches for debugging
- Lots of changes to TeX's internals
- default units now cm
- group has insert function
- Paper now takes an orientation flag (portrait or landscape)
- showpage always written to EPS file ... should be able to send file straight
  to printer
- more of the docs written
- E() has been renamed U() (unit vector)
- Epsf() now complies with spec, takes an initial width/height
  argument for scaling
- added Align() and Distribute() functions
- added a presentation library for posters and talks
- munched some bugs

0.2
~~~

- First public release

0.1
~~~

- Hazy past with lots of experimentation ... never released